--- a/stylesheet.css
+++ b/stylesheet.css
@@ -14,6 +14,9 @@ a{
 }
 h1{
 	color:#000000;
+	font-family: Verdana, Geneva, sans-serif;
+	font-size: 60px;
+	text-align: center;
 }
 img{
 	position: absolute;
